# oil-pricing-model

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: signals.json
scripts/: recover_history.py
src/oil_risk/: config.py  dashboard.py  features.py  signals_config.py
src/oil_risk/adapters/: fred_adapter.py  gdelt_adapter.py
src/oil_risk/db/: io.py  schema.py
src/oil_risk/llm/: __init__.py  news_classifier.py
src/oil_risk/modeling/: regime.py  tail_risk.py
src/oil_risk/options_flow/: __init__.py  base.py  polygon.py
src/oil_risk/pipelines/: build_evidence_pack.py  build_features.py  data_views.py  evaluate_signals.py  export_alerts.py  export_signal_engine.py  generate_report.py  generate_signals.py  train_model.py  tune_signals.py  update_market.py  update_news.py
tests/: conftest.py  test_dashboard.py  test_dashboard_status.py  test_evaluate_signals.py  test_evidence_pack.py  test_export_alerts.py  test_export_signal_engine.py  test_features.py  test_fred_adapter.py  test_gdelt_adapter.py  test_generate_signals.py  test_llm_news.py  test_no_network_smoke.py  test_options_flow.py  test_pipeline_smoke_optional.py  test_signals_config.py  test_tail_risk.py  test_train_model_feature_set.py  test_tune_signals.py  test_update_news.py
