[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oil-risk"
version = "0.1.0"
description = "Iran oil move risk premium model with daily market and news signals"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "requests>=2.31.0",
  "sqlalchemy>=2.0.0",
  "pyarrow>=15.0.0",
  "scikit-learn>=1.4.0",
  "joblib>=1.3.0",
  "python-dateutil>=2.9.0",
  "streamlit>=1.36.0",
  "plotly>=5.22.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[project.scripts]
oil-update-market = "oil_risk.pipelines.update_market:main"
oil-update-news = "oil_risk.pipelines.update_news:main"
oil-build-features = "oil_risk.pipelines.build_features:main"
oil-train-model = "oil_risk.pipelines.train_model:main"
oil-generate-signals = "oil_risk.pipelines.generate_signals:main"
oil-generate-report = "oil_risk.pipelines.generate_report:main"
oil-evaluate-signals = "oil_risk.pipelines.evaluate_signals:main"
oil-export-alerts = "oil_risk.pipelines.export_alerts:main"
oil-build-evidence-pack = "oil_risk.pipelines.build_evidence_pack:main"
oil-tune-signals = "oil_risk.pipelines.tune_signals:main"
oil-dashboard = "oil_risk.dashboard:main"
